Updated All files

--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -524,7 +524,7 @@
                         <button type="submit" class="login-button">Login</button>
                     </form>
                     
-                    <a href="#" class="forgot-password-link">Forgot password?</a>
+                    <a href="{% url 'password_reset' %}" class="forgot-password-link">Forgot password?</a>
                     <p class="copyright">
                         &copy; {% now "Y" %} EduTrack
                     </p>
@@ -544,7 +544,7 @@
             <div class="right-section">
                 <div class="content">
                     <h2>Welcome to EduTrack</h2>
-                    <p>Your all-in-one platform for effortless academic management. Log in to access your personalized dashboard and streamline your daily tasks</p>
+                    <p>Your all-in-one platform for seamless attendance tracking. Log in to access your dashboard and manage attendance effortlessly across your modules.</p>
                 </div>
             </div>
         </div>
